Add code to make website look better on mobile

--- a/about.html
+++ b/about.html
@@ -6,11 +6,10 @@
     <title>Forever in Tune | Band Members</title>
     <link rel="stylesheet" href="css/styles.css">
     <style>
-        /* Add this to override the body background */
         body {
-            background-color: #F7F7F7; /* Adjust the hex code if necessary */
+            background-color: #F7F7F7; 
             background-image: none; /* Ensure the image is removed */
-            color: #555555; /* Optional: Complementary text color */
+            color: #555555;
         }
     </style>
 </head>
