--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <main>
+    <main style="padding-bottom: 50px;">
         <section class="welcome">
             <h1>Welcome to Forever in Tune</h1>
             <p>Your top choice for weddings, parties, and special events. From classic hits to modern favorites, we guarantee an unforgettable experience.</p>
