Update the contact page to look better and respond to user submission

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forever in Tune | Contact Us</title>
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        /* Vertical */
+        form {
+            width: 400px;
+            margin-left: 20px; /* Align the form to the left */
+        }
+
+        label, input, textarea, button {
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+        
+    </style>
+    <script>
+        // Simple function to show a thank you alert and clear the form
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevent the form from submitting
+            alert('Thank you for your message!'); // Show thank you message
+            document.getElementById('contactForm').reset(); // Clear the form
+        }
+    </script>
 </head>
 <body>
     <header>        
@@ -24,7 +46,7 @@
 
     <main>
         <h1>Contact Us</h1>
-        <form action="/submit" method="POST">
+        <form id="contactForm" onsubmit="handleSubmit(event)">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required>
 
